<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">>
    <string name="app_name">StudyRise</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <string name="logout">Излез</string>

    <string name="nav_home">Home</string>
    <string name="nav_settings">Setting</string>
    <string name="nav_share">Share</string>
    <string name="nav_rate_us">Rate US</string>
    <string name="nav_about_us">About Us</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity">Здравейте.</string>

    <string name="username">Потребител</string>
    <string name="password">Парола</string>
    <string name="email">Имейл</string>
    <string name="passwordRepeat">Повтори паролата</string>
    <string name="registrationText">Нова регистрация</string>
    <string name="loginText">Вход в системата</string>

    <string name="productivity">Продуктивност</string>
    <string name="questionNav">Задачи</string>
    <string name="activ">Активи</string>
    <string name="addNewActiv">Добави нов актив</string>
    <string name="points">Точки</string>
    <string name="activList">Актив</string>

    <string name="achievementList">Награда</string>

    <string name="addNewAchievement">Добави нова награда</string>
    <string name="achievement">Награди</string>
    <string name="edit">Промени</string>
    <string name="programs">Програми</string>

    <string name="title_template_step">Step <xliff:g id="step_number">%1$d</xliff:g>: Lorem
        Ipsum</string>
    <string name="bar_data">Няма данни за посочения период</string>
    <string name="finance_title">Финанси</string>

</resources>
