<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="10dp"
        android:text="@string/activ"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/activList" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:text="@string/points" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:id="@+id/list_activ"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:descendantFocusability="blocksDescendants" />

        <Button
            android:id="@+id/addNewActiv"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_activ"
            android:background="@color/colorPrimary"
            android:text="@string/addNewActiv"
            android:textColor="@android:color/white"
            android:focusable="false"
            android:focusableInTouchMode="false"/>

    </RelativeLayout>

</LinearLayout>